--- a/index.html
+++ b/index.html
@@ -81,19 +81,18 @@
       <img src="https://i.postimg.cc/6QzjYwy5/Whats-App-Image-2025-09-01-at-9-17-04-AM.jpg" alt="Aamir Shahzad">
     </div>
     <div class="about-text">
-      <h2>About <span>Me</span></h2>
-      <p>
-        I’m a passionate <b>Lead Generation Expert</b> helping businesses grow with 
-        modern digital strategies. With strong knowledge in data research, 
-        email marketing, and prospect building, I aim to provide quality leads 
-        that convert into real business opportunities.
-      </p>
-      <ul class="info">
-        <li><b>Email:</b> aamirsinfo@gmail.com</li>
-        <li><b>Phone:</b> +92 306 3337925</li>
-        <li><b>Location:</b> Bahawalpur, Pakistan</li>
-      </ul>
-    </div>
+  <h2>About <span>Me</span></h2>
+  <p>I'm a seasoned **Digital Marketing and Lead Generation expert** with over **2 years of hands-on experience**. My core expertise lies in meticulously sourcing and delivering high-quality leads for businesses across various industries. I am proficient in developing targeted contact lists, including **verified emails, phone numbers, and key decision-maker information**.</p>
+  <p>Beyond lead generation, my skills extend to **strategic outreach, data enrichment, and comprehensive digital marketing**. I'm dedicated to helping clients achieve their business goals by providing actionable data and fostering growth. My passion is to find new opportunities and build strong foundations for your success.</p>
+  
+  <ul class="info">
+    <li><span>Name:</span> Aamir Shahzad</li>
+    <li><span>Email:</span> aamirsinfo@gmail.com</li>
+    <li><span>Experience:</span> 2+ Years</li>
+    <li><span>Location:</span> Bahawalpur, Pakistan</li>
+  </ul>
+  <a href="#contact" class="btn">Get in Touch</a>
+</div>
   </section>
 
   <!-- ================= SERVICES ================= -->
@@ -102,42 +101,54 @@
     <div class="service-container">
 
       <div class="service-box">
-        <h3><i class="fas fa-bullseye"></i> Lead Generation</h3>
-        <p>Quality leads that match your target audience for higher conversions.</p>
-        <ul class="service-points">
-          <li><i class="fas fa-check-circle"></i> B2B Lead Research</li>
-          <li><i class="fas fa-check-circle"></i> LinkedIn Prospecting</li>
-          <li><i class="fas fa-check-circle"></i> Verified Email Lists</li>
-        </ul>
-      </div>
+  <h3><i class="fas fa-bullseye"></i> Lead Generation</h3>
+  <p>Providing high-quality, verified leads to help your business grow and convert.</p>
+  <ul class="service-points">
+    <li><i class="fas fa-check-circle"></i> B2B & B2C Lead Generation</li>
+    <li><i class="fas fa-check-circle"></i> Targeted Prospect List Building</li>
+    <li><i class="fas fa-check-circle"></i> Data Sourcing & Enrichment</li>
+    <li><i class="fas fa-check-circle"></i> LinkedIn Sales Navigator Expertise</li>
+    <li><i class="fas fa-check-circle"></i> Contact List Development</li>
+    <li><i class="fas fa-check-circle"></i> Lead Verification & Cleansing</li>
+  </ul>
+</div>
 
       <div class="service-box">
   <h3><i class="fas fa-bullhorn"></i> Digital Marketing</h3>
   <p>Comprehensive strategies to boost your online presence and grow your business.</p>
   <ul class="service-points">
     <li><i class="fas fa-check-circle"></i> Social Media Management</li>
-    <li><i class="fas fa-check-circle"></i> Content Marketing</li>
-    <li><i class="fas fa-check-circle"></i> Paid Advertising</li>
+    <li><i class="fas fa-check-circle"></i> Content Marketing Strategy</li>
+    <li><i class="fas fa-check-circle"></i> Cold Email Marketing & Campaigns</li>
+    <li><i class="fas fa-check-circle"></i> Paid Advertising (Google/Social)</li>
+    <li><i class="fas fa-check-circle"></i> SEO Content Writing</li>
+    <li><i class="fas fa-check-circle"></i> Brand Visibility & Growth</li>
   </ul>
 </div>
 
       <div class="service-box">
-        <h3><i class="fas fa-laptop-code"></i> Web Research</h3>
-        <p>Accurate data collection to support business and marketing efforts.</p>
-        <ul class="service-points">
-          <li><i class="fas fa-check-circle"></i> Market Research</li>
-          <li><i class="fas fa-check-circle"></i> Competitor Analysis</li>
-          <li><i class="fas fa-check-circle"></i> Data Scraping</li>
-        </ul>
-      </div>
+  <h3><i class="fas fa-share-alt"></i> Outreach Campaigns</h3>
+  <p>Building meaningful connections to secure partnerships and high-quality backlinks.</p>
+  <ul class="service-points">
+    <li><i class="fas fa-check-circle"></i> Backlink & Guest Post Outreach</li>
+    <li><i class="fas fa-check-circle"></i> Influencer & Blogger Outreach</li>
+    <li><i class="fas fa-check-circle"></i> Personalized Cold Emailing</li>
+    <li><i class="fas fa-check-circle"></i> Strategic Partnership Sourcing</li>
+    <li><i class="fas fa-check-circle"></i> High-Response Rate Messaging</li>
+    <li><i class="fas fa-check-circle"></i> Campaign Tracking & Reporting</li>
+  </ul>
+</div>
 
       <div class="service-box">
   <h3><i class="fas fa-search"></i> SEO & Content</h3>
   <p>Optimizing your online presence to rank higher and attract organic traffic.</p>
   <ul class="service-points">
     <li><i class="fas fa-check-circle"></i> On-page & Off-page SEO</li>
-    <li><i class="fas fa-check-circle"></i> Keyword Research</li>
-    <li><i class="fas fa-check-circle"></i> Content Strategy</li>
+    <li><i class="fas fa-check-circle"></i> Keyword Research & Analysis</li>
+    <li><i class="fas fa-check-circle"></i> Technical SEO Audit</li>
+    <li><i class="fas fa-check-circle"></i> Content Strategy & Planning</li>
+    <li><i class="fas fa-check-circle"></i> Link Building & Outreach</li>
+    <li><i class="fas fa-check-circle"></i> Competitor Analysis</li>
   </ul>
 </div>
 
@@ -153,7 +164,7 @@
             <div class="thumbnail">
                 <img src="https://i.postimg.cc/BZwWJ5ZQ/Screenshot-2025-08-16-120554.png" alt="Lead Generation">
             </div>
-            <h3>Lead Generation</h3>
+            <h3><i class="fas fa-bullseye"></i> Lead Generation</h3>
             <div class="hover-text">
                 <p>See More Details</p>
             </div>
@@ -165,7 +176,7 @@
             <div class="thumbnail">
                 <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Digital Marketing">
             </div>
-            <h3>Digital Marketing</h3>
+            <h3><i class="fas fa-bullhorn"></i> Digital Marketing</h3>
             <div class="hover-text">
                 <p>See More Details</p>
             </div>
@@ -177,7 +188,7 @@
             <div class="thumbnail">
                 <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Outreach Campaigns">
             </div>
-            <h3>Outreach Campaigns</h3>
+            <h3><i class="fas fa-share-alt"></i> Outreach Campaigns</h3>
             <div class="hover-text">
                 <p>See More Details</p>
             </div>
@@ -189,7 +200,7 @@
             <div class="thumbnail">
                 <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="SEO Services">
             </div>
-            <h3>SEO Services</h3>
+            <h3><i class="fas fa-search"></i> SEO Services</h3>
             <div class="hover-text">
                 <p>See More Details</p>
             </div>
@@ -294,11 +305,11 @@
         <div class="footer-col">
           <h4>About</h4>
           <ul>
-            <li><a href="about.html">My Story</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="index.html#about">My Story</a></li>
+            <li><a href="index.html#services">Services</a></li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
             <li><a href="#certifications">My Certificates</a></li>
-            <li><a href="https://linktr.ee/aamirinfo" target="_blank">My Social Media</a></li>
+            <li><a href="https://linktr.ee/aamirinfo" target="_blank">Follow me</a></li>
           </ul>
         </div>
         
