--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
                 <a href="#" target="_blank" class="cert-link">View Certificate</a>
             </div>
         </div>
+        <div class="cert-dots"></div>
     </section>
 
     <section class="contact" id="contact">
