--- a/index.html
+++ b/index.html
@@ -550,6 +550,24 @@ if (certsContainer && certsDotsContainer) {
         }
     });
 }
+        // Hamburger Menu Functionality
+    const hamburger = document.querySelector('.hamburger');
+    const navLinks = document.querySelector('.nav-links');
+
+    if (hamburger && navLinks) {
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navLinks.classList.toggle('active');
+        });
+
+        // Close menu when a link is clicked (for smooth navigation)
+        navLinks.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', () => {
+                hamburger.classList.remove('active');
+                navLinks.classList.remove('active');
+            });
+        });
+    }
     </script>
 </body>
 </html>
