--- a/index.html
+++ b/index.html
@@ -100,11 +100,10 @@
                 </ul>
             </div>
             <div class="service-box">
-                <h3><i class="fas fa-share-alt"></i> Outreach Campaigns</h3>
+                <h3><i class="fas fa-share-alt"></i> Outreach Strategy</h3>
                 <p>Building meaningful connections to secure partnerships and high-quality backlinks.</p>
                 <ul class="service-points">
                     <li><i class="fas fa-check-circle"></i> Backlink & Guest Post Outreach</li>
-                    <li><i class="fas fa-check-circle"></i> Influencer & Blogger Outreach</li>
                     <li><i class="fas fa-check-circle"></i> Personalized Cold Emailing</li>
                     <li><i class="fas fa-check-circle"></i> Strategic Partnership Sourcing</li>
                     <li><i class="fas fa-check-circle"></i> High-Response Rate Messaging</li>
