--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="https://i.postimg.cc/6QzjYwy5/Whats-App-Image-2025-09-01-at-9-17-04-AM.jpg" alt="Aamir Shahzad">
+            <img src="https://i.postimg.cc/GpQKwSDr/my-png-1.png" alt="Aamir Shahzad">
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
