--- a/index.html
+++ b/index.html
@@ -310,16 +310,16 @@
                         <li><a href="index.html#about">My Story</a></li>
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="index.html#portfolio">Portfolio</a></li>
-                        <li><a href="#certifications">My Certificates</a></li>
+                        <li><a href="#certifications">Certificates</a></li>
                         <li><a href="https://linktr.ee/aamirinfo" target="_blank">Follow me</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Contact</h4>
                     <ul>
-                        <li><a href="tel:+923063337925"><i class="fas fa-phone-alt"></i> +92 306 3337 925</a></li>
-                        <li><a href="mailto:aamirsinfo@gmail.com"><i class="fas fa-envelope"></i> aamirsinfo@gmail.com</a></li>
-                        <li><span><i class="fas fa-map-marker-alt"></i> Bahawalpur, Pakistan</span></li>
+                        <li><a href="tel:+923063337925"><i class="fas fa-phone-alt"></i>Phone</a></li>
+                        <li><a href="mailto:aamirsinfo@gmail.com"><i class="fas fa-envelope"></i>Email</a></li>
+                        <li><span><i class="fas fa-map-marker-alt"></i>Address</span></li>
                     </ul>
                 </div>
                 <div class="footer-col">
