--- a/index.html
+++ b/index.html
@@ -297,14 +297,14 @@
         </form>
     </section>
 
-    <footer class="footer">
-        <div class="footer-top">
-            <div class="logo-col">
-                <img src="https://i.postimg.cc/DwMtG0ZR/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
-                <p class="tagline">Designing Dreams, Crafting Reality</p>
-            </div>
-            <div class="footer-right">
-                <div class="footer-col">
+    <div class="footer-top">
+    <div class="footer-main-content">
+        <div class="logo-col">
+            <img src="https://i.postimg.cc/DwMtG0ZR/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
+            <p class="tagline">Designing Dreams, Crafting Reality</p>
+        </div>
+        <div class="footer-columns">
+            <div class="footer-col">
                     <h4>About</h4>
                     <ul>
                         <li><a href="index.html#about">My Story</a></li>
@@ -329,7 +329,7 @@
                         <li><a href="privacy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
-            </div>
+            </div>    
         </div>
         <div class="footer-bottom">
             <div class="social-icons">
