--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <img src="https://i.postimg.cc/DwMtG0ZR/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
             <p class="tagline">Designing Dreams, Crafting Reality</p>
         </div>
-        <div class="footer-columns">
+        <div class="footer-right">
             <div class="footer-col">
                     <h4>About</h4>
                     <ul>
