--- a/index.html
+++ b/index.html
@@ -297,29 +297,29 @@
         </form>
     </section>
 
-    <div class="footer-top">
-    <div class="footer-main-content">
-        <div class="logo-col">
-            <img src="https://i.postimg.cc/DwMtG0ZR/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
-            <p class="tagline">Designing Dreams, Crafting Reality</p>
-        </div>
-        <div class="footer-right">
-            <div class="footer-col">
+    <footer class="footer">
+        <div class="footer-top">
+            <div class="logo-col">
+                <img src="https://i.postimg.cc/DwMtG0ZR/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
+                <p class="tagline">Designing Dreams, Crafting Reality</p>
+            </div>
+            <div class="footer-right">
+                <div class="footer-col">
                     <h4>About</h4>
                     <ul>
                         <li><a href="index.html#about">My Story</a></li>
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="index.html#portfolio">Portfolio</a></li>
-                        <li><a href="#certifications">Certificates</a></li>
+                        <li><a href="#certifications">My Certificates</a></li>
                         <li><a href="https://linktr.ee/aamirinfo" target="_blank">Follow me</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Contact</h4>
                     <ul>
-                        <li><a href="tel:+923063337925"><i class="fas fa-phone-alt"></i>Phone</a></li>
-                        <li><a href="mailto:aamirsinfo@gmail.com"><i class="fas fa-envelope"></i>Email</a></li>
-                        <li><span><i class="fas fa-map-marker-alt"></i>Address</span></li>
+                        <li><a href="tel:+923063337925"><i class="fas fa-phone-alt"></i> +92 306 3337 925</a></li>
+                        <li><a href="mailto:aamirsinfo@gmail.com"><i class="fas fa-envelope"></i> aamirsinfo@gmail.com</a></li>
+                        <li><span><i class="fas fa-map-marker-alt"></i> Bahawalpur, Pakistan</span></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -329,7 +329,7 @@
                         <li><a href="privacy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
-            </div>    
+            </div>
         </div>
         <div class="footer-bottom">
             <div class="social-icons">
@@ -538,20 +538,5 @@ if (certsContainer && certsDotsContainer) {
     });
 }
     </script>
-    <script>
-    const form = document.getElementById('contactForm');
-    const messageInput = form.querySelector('textarea[name="message"]');
-
-    messageInput.addEventListener('keydown', function(event) {
-        // Check if the pressed key is "Enter" AND the "Shift" key is also pressed
-        if (event.key === 'Enter' && event.shiftKey) {
-            // Stop the default behavior of Shift + Enter (which is just to add a new line)
-            event.preventDefault(); 
-            
-            // Now, send the form
-            form.submit();
-        }
-    });
-</script>
 </body>
 </html>
