--- a/thankyou.html
+++ b/thankyou.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You</title>
+    <title>Thank You | Aamir Shahzad</title>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
     <style>
         /* ================= THANK YOU PAGE STYLES ================= */
         body {
@@ -57,7 +59,6 @@
             background: #fff;
             color: #ff9800;
         }
-
         /* Animation */
         @keyframes fadeInScale {
             from {
