--- a/index.html
+++ b/index.html
@@ -60,15 +60,19 @@
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
-            <p>I'm a seasoned <strong>Digital Marketing and Lead Generation expert</strong> with over <strong>2 years of hands-on experience</strong>. My core expertise lies in meticulously sourcing and delivering high-quality leads for businesses across various industries. I am proficient in developing targeted contact lists, including <strong>verified emails, phone numbers, and key decision-maker information</strong>.</p>
-            <p>Beyond lead generation, my skills extend to <strong>strategic outreach, data enrichment, and comprehensive digital marketing</strong>. I'm dedicated to helping clients achieve their business goals by providing actionable data and fostering growth. My passion is to find new opportunities and build strong foundations for your success.</p>
-            <ul class="info">
-                <li><span>Name:</span> Aamir Shahzad</li>
-                <li><span>Email:</span> aamirsinfo@gmail.com</li>
-                <li><span>Experience:</span> 2+ Years</li>
-                <li><span>Location:</span> Bahawalpur, Pakistan</li>
-            </ul>
-            <a href="#contact" class="btn">Get in Touch</a>
+            <p>
+                I'm a dedicated **Lead Generation and Outreach Specialist** with a passion for connecting businesses with their ideal clients. As a freelancer, I specialize in crafting personalized strategies that drive real results.
+            </p>
+            <p>
+                My expertise lies in meticulously **building high-quality prospect lists** and executing targeted **outreach campaigns**. I leverage advanced tools for web research and data mining, ensuring every lead is verified and valuable.
+            </p>
+            <p>
+                My goal is simple: to help you expand your network and grow your business by providing the right leads and building meaningful relationships that convert into lasting opportunities.
+            </p>
+            <div class="btn-group">
+                <a href="#contact" class="btn">Let's Connect</a>
+                <a href="Aamir Shahzad CV.pdf" class="btn-secondary" target="_blank">Download CV</a>
+            </div>
         </div>
     </section>
     
