--- a/index.html
+++ b/index.html
@@ -501,6 +501,6 @@ if (certContainer && scrollLeftBtn && scrollRightBtn) {
     });
 }
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/tsparticles@2.12.0/tsparticles.bundle.min.js"></script>
 </body>
 </html>
