--- a/index.html
+++ b/index.html
@@ -508,5 +508,6 @@ if (certContainer && scrollLeftBtn && scrollRightBtn) {
 }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.12.0/tsparticles.bundle.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
