--- a/index.html
+++ b/index.html
@@ -9,28 +9,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <script src="https://kit.fontawesome.com/7f6f16d9c2.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-    <div id="preloader">
+    <div id="preloader" class="preloader-overlay">
         <div class="cube-grid">
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
-            <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+            <script>
+                for (let i = 0; i < 16; i++) {
+                    document.write(`
+                        <div class="cube">
+                            <div class="face top"></div>
+                            <div class="face bottom"></div>
+                            <div class="face left"></div>
+                            <div class="face right"></div>
+                            <div class="face front"></div>
+                            <div class="face back"></div>
+                        </div>
+                    `);
+                }
+            </script>
         </div>
     </div>
     
@@ -59,7 +56,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="https://i.postimg.cc/GpQKwSDr/my-png-1.png" alt="Aamir Shahzad, Lead Generation Expert">
+            <img src="https://i.postimg.cc/GpQKwSDr/my-png-1.png" alt="Aamir Shahzad">
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
@@ -79,35 +76,6 @@
         </div>
     </section>
     
-    <section id="tools" class="tools-section">
-        <div class="content-box">
-            <h2 class="heading">Tools & Technology</h2>
-            <p class="sub-heading">I leverage industry-standard tools to deliver exceptional results in lead generation and outreach.</p>
-            <div class="tools-grid">
-                <div class="tool-item">
-                    <img src="https://i.postimg.cc/FK42X87b/sales-navigator.png" alt="LinkedIn Sales Navigator Logo">
-                    <h3>LinkedIn Sales Navigator</h3>
-                    <p>Expert in identifying and connecting with qualified B2B leads.</p>
-                </div>
-                <div class="tool-item">
-                    <img src="https://i.postimg.cc/W1D0gG7F/hunterio.png" alt="Hunter.io Logo">
-                    <h3>Hunter.io</h3>
-                    <p>Ensuring email verification for accurate and high-deliverability campaigns.</p>
-                </div>
-                <div class="tool-item">
-                    <img src="https://i.postimg.cc/T34F361w/zerobounce.png" alt="Zerobounce Logo">
-                    <h3>Zerobounce</h3>
-                    <p>Maintaining a high-quality email list with minimal bounce rates.</p>
-                </div>
-                <div class="tool-item">
-                    <img src="https://i.postimg.cc/3rKj450x/mailchimp.png" alt="Mailchimp Logo">
-                    <h3>Mailchimp</h3>
-                    <p>Executing targeted and personalized email marketing campaigns.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section class="services" id="services">
         <h2>My <span>Services</span></h2>
         <div class="service-container">
@@ -166,25 +134,25 @@
         <div class="portfolio-container">
             <div class="portfolio-item">
                 <a href="lead-generation.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/BZwWJ5ZQ/Screenshot-2025-08-16-120554.png" alt="Lead Generation project screenshot">
+                    <img src="https://i.postimg.cc/BZwWJ5ZQ/Screenshot-2025-08-16-120554.png" alt="Lead Generation">
                     <h3><i class="fas fa-bullseye"></i> Lead Generation</h3>
                 </a>
             </div>
             <div class="portfolio-item">
                 <a href="digital-marketing.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Digital Marketing project screenshot">
+                    <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Digital Marketing">
                     <h3><i class="fas fa-bullhorn"></i> Digital Marketing</h3>
                 </a>
             </div>
             <div class="portfolio-item">
                 <a href="outreach.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Outreach Campaigns project screenshot">
+                    <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Outreach Campaigns">
                     <h3><i class="fas fa-share-alt"></i> Outreach Campaigns</h3>
                 </a>
             </div>
             <div class="portfolio-item">
                 <a href="seo.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="SEO Services project screenshot">
+                    <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="SEO Services">
                     <h3><i class="fas fa-search"></i> SEO Services</h3>
                 </a>
             </div>
@@ -216,17 +184,17 @@
             <h2>Client <span>Reviews</span></h2>
             <div class="review-slider">
                 <div class="review active">
-                    <img class="client-pic" src="https://i.postimg.cc/L80RHS3r/Ben-Miller.jpg" alt="Ben Miller, a satisfied client">
+                    <img class="client-pic" src="https://i.postimg.cc/L80RHS3r/Ben-Miller.jpg" alt="Ben Miller">
                     <p>"Working with Aamir has been a game-changer. The leads were high-quality, and conversion rates improved drastically."</p>
                     <h4>Ben Miller</h4>
                 </div>
                 <div class="review">
-                    <img class="client-pic" src="https://i.postimg.cc/9FmjZ0x6/James-Elliott.jpg" alt="James Elliott, a satisfied client">
+                    <img class="client-pic" src="https://i.postimg.cc/9FmjZ0x6/James-Elliott.jpg" alt="James Elliott">
                     <p>"Professional service, clear communication & excellent results. Highly recommend!"</p>
                     <h4>James Elliott</h4>
                 </div>
                 <div class="review">
-                    <img class="client-pic" src="https://i.postimg.cc/MTBj7dGp/Saurab-Khajuria.jpg" alt="Saurab Khajuria, a satisfied client">
+                    <img class="client-pic" src="https://i.postimg.cc/MTBj7dGp/Saurab-Khajuria.jpg" alt="Saurab Khajuria">
                     <p>"Very impressed with the research depth & responsiveness. My sales enquiries increased."</p>
                     <h4>Saurab Khajuria</h4>
                 </div>
@@ -336,7 +304,7 @@
     <footer class="footer">
         <div class="footer-top">
             <div class="logo-col">
-                <img src="https://i.postimg.cc/DwMtG0ZR/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Company Logo">
+                <img src="https://i.postimg.cc/DwMtG0ZR/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
                 <p class="tagline">Designing Dreams, Crafting Reality</p>
             </div>
             <div class="footer-right">
@@ -379,9 +347,6 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.12.0/tsparticles.bundle.min.js"></script>
-    <script src="script.js"></script> </body>
-</html>
 
     <script>
 // ================= PRELOADER =================
