--- a/privacy.html
+++ b/privacy.html
@@ -32,10 +32,10 @@
             <p>Our website may contain links to other sites that we do not operate. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
 
             <h2>5. Changes to This Policy</h2>
-            <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new policy on this page.</p>
+            <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the updated policy on this page.</p>
 
             <h2>6. Contact Us</h2>
-            <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:your_email@example.com">your_email@example.com</a>.</p>
+            <p>If you have any questions about this Privacy Policy, don't hesitate to get in touch with us at <a href="mailto:aamirsinfo@gmail.com">aamirsinfo@gmail.cpom</a>.</p>
         </div>
     </section>
 
