--- a/privacy.html
+++ b/privacy.html
@@ -35,7 +35,7 @@
             <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the updated policy on this page.</p>
 
             <h2>6. Contact Us</h2>
-            <p>If you have any questions about this Privacy Policy, don't hesitate to get in touch with us at <a href="mailto:aamirsinfo@gmail.com">aamirsinfo@gmail.cpom</a>.</p>
+            <p>If you have any questions about this Privacy Policy, don't hesitate to get in touch with us at <a href="mailto:aamirsinfo@gmail.com">aamirsinfo@gmail.com</a>.</p>
         </div>
     </section>
 
