--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <p>
-                I'm a dedicated **Lead Generation and Outreach Specialist** with a passion for connecting businesses with their ideal clients. As a freelancer, I specialize in crafting personalized strategies that drive real results.
-            </p>
-            <p>
-                My expertise lies in meticulously **building high-quality prospect lists** and executing targeted **outreach campaigns**. I leverage advanced tools for web research and data mining, ensuring every lead is verified and valuable.
-            </p>
+    I'm a dedicated <strong>Lead Generation and Outreach Specialist</strong> with a passion for connecting businesses with their ideal clients. As a freelancer, I specialize in crafting personalized strategies that drive real results.
+</p>
+<p>
+    My expertise lies in meticulously <strong>building high-quality prospect lists</strong> and executing targeted <strong>outreach campaigns</strong>. I leverage advanced tools for web research and data mining, ensuring every lead is verified and valuable.
+</p>
             <p>
                 My goal is simple: to help you expand your network and grow your business by providing the right leads and building meaningful relationships that convert into lasting opportunities.
             </p>
