--- a/lead-generation.html
+++ b/lead-generation.html
@@ -49,14 +49,14 @@
 
         <h2 id="b2b-leads">Key Responsibilities & Deliverables</h2>
         <ul>
-            <li>**Target Audience Research:** Conducted in-depth research to define the ideal customer profile.</li>
-            <li>**Prospect List Building:** Utilized LinkedIn Sales Navigator and other premium tools to build a list of 500+ qualified leads.</li>
-            <li>**Email Verification:** Used tools like Hunter.io and Zerobounce to ensure all emails were valid, resulting in a bounce rate of less than 2%.</li>
-            <li>**Data Enrichment:** Enriched data with phone numbers and company details to provide a complete dataset.</li>
+            <li><strong>Target Audience Research:</strong> Conducted in-depth research to define the ideal customer profile.</li>
+            <li><strong>Prospect List Building:</strong> Utilized LinkedIn Sales Navigator and other premium tools to build a list of 500+ qualified leads.</li>
+            <li><strong>Email Verification:</strong> Used tools like Hunter.io and Zerobounce to ensure all emails were valid, resulting in a bounce rate of less than 2%.</li>
+            <li><strong>Data Enrichment:</strong> Enriched data with phone numbers and company details to provide a complete dataset.</li>
         </ul>
 
         <h2>Results</h2>
-        <p>The successful execution of this project led to a **30% increase in the client's sales pipeline** and a significant reduction in lead acquisition time. The high quality of the leads ensured a strong return on investment (ROI).</p>
+        <p>The successful execution of this project led to a <strong>30% increase in the client's sales pipeline</strong> and a significant reduction in lead acquisition time. The high quality of the leads ensured a strong return on investment (ROI).</p>
 
         <a href="index.html#contact" class="btn">Get Leads for Your Business</a>
     </div>
