--- a/seo.html
+++ b/seo.html
@@ -47,14 +47,14 @@
 
         <h2 id="on-page-seo">Key Responsibilities & Deliverables</h2>
         <ul>
-            <li>**Keyword Research:** Identified high-volume, low-competition keywords to target.</li>
-            <li>**On-Page SEO:** Optimized website content, meta tags, and headers for search engines.</li>
-            <li>**Off-Page SEO:** Built high-quality backlinks through guest blogging and link outreach.</li>
-            <li>**Technical SEO:** Addressed website speed and mobile-friendliness to improve user experience.</li>
+            <li><strong>Keyword Research:</strong> Identified high-volume, low-competition keywords to target.</li>
+            <li><strong>On-Page SEO:</strong> Optimized website content, meta tags, and headers for search engines.</li>
+            <li><strong>Off-Page SEO:</strong> Built high-quality backlinks through guest blogging and link outreach.</li>
+            <li><strong>Technical SEO:</strong> Addressed website speed and mobile-friendliness to improve user experience.</li>
         </ul>
 
         <h2>Results</h2>
-        <p>Within three months, the client's website saw a **45% increase in organic traffic** and achieved top-10 rankings for several key search terms.</p>
+        <p>Within three months, the client's website saw a <strong>45% increase in organic traffic</strong> and achieved top-10 rankings for several key search terms.</p>
 
         <a href="index.html#contact" class="btn">Boost Your SEO Now</a>
     </div>
