--- a/index.html
+++ b/index.html
@@ -61,14 +61,24 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <p>
-    I'm a dedicated <strong>Lead Generation and Outreach Specialist</strong> with a passion for connecting businesses with their ideal clients. As a freelancer, I specialize in crafting personalized strategies that drive real results.
+    I'm a dedicated <strong>Lead Generation and Outreach Specialist</strong> with a passion for connecting businesses with their ideal clients. As a freelancer, I specialize in crafting personalized strategies that drive real results and help businesses grow faster.
 </p>
+
 <p>
-    My expertise lies in meticulously <strong>building high-quality prospect lists</strong> and executing targeted <strong>outreach campaigns</strong>. I leverage advanced tools for web research and data mining, ensuring every lead is verified and valuable.
+    My expertise lies in meticulously <strong>building high-quality prospect lists</strong> and executing targeted <strong>outreach campaigns</strong>. Whether it's <strong>LinkedIn lead generation</strong>, <strong>email sourcing</strong>, or gathering data from specific platforms, I leverage advanced tools and proven methods to ensure every lead is accurate, verified, and valuable.
 </p>
-            <p>
-                My goal is simple: to help you expand your network and grow your business by providing the right leads and building meaningful relationships that convert into lasting opportunities.
-            </p>
+
+<p>
+    I can extract leads from any niche—be it <strong>SaaS, Tech, E-commerce, Real Estate, Healthcare</strong>, or other industries—tailoring each list according to your specific requirements. From <strong>targeted B2B leads</strong> to <strong>hyper-specific recruiting lists</strong>, I can handle it all with precision and efficiency.
+</p>
+
+<p>
+    Along with lead generation, I specialize in <strong>outreach campaigns, recruiting, and sourcing</strong>, helping businesses connect with decision-makers and potential clients through personalized communication strategies that truly convert.
+</p>
+
+<p>
+    <strong>My goal</strong> is simple: to help you expand your network, grow your business, and achieve lasting success by providing the right leads and building meaningful relationships that lead to real opportunities.
+</p>
             <div class="btn-group">
                 <a href="#contact" class="btn">Let's Connect</a>
                 <a href="Aamir Shahzad CV.pdf" class="btn-secondary" target="_blank">Download CV</a>
