--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         });
 
         // Typing Effect
-        const texts = ["Lead Generation Specialist", "Web Research Expert", "Freelancer"];
+        const texts = ["Lead Generation Specialist", "Outreach Expert", "Marketing Expert", "SEO Specialist"];
         let count = 0, index = 0, currentText = "", letter = "";
         const typingEl = document.querySelector(".typing-text");
         (function type() {
