--- a/index.html
+++ b/index.html
@@ -552,5 +552,6 @@ if (certsContainer && certsDotsContainer) {
     });
 }
     </script>
+    <script src="script.js?v=2"></script>
 </body>
 </html>
