--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aamir Shahzad | Portfolio</title>
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://i.postimg.cc/Y94XQYTg/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://i.postimg.cc/MpCXWSqS/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/MKb8cJ7w/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://i.postimg.cc/fW1b7sS0/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="https://i.postimg.cc/kXZWtLqj/android-chrome-512x512.png">
+    <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
