--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
             <div class="portfolio-item">
                 <a href="outreach.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Outreach Campaigns">
+                    <img src="https://ibb.co/WWfyws1d" alt="Outreach Campaigns">
                     <h3><i class="fas fa-share-alt"></i> Outreach Campaigns</h3>
                 </a>
             </div>
