--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="portfolio-container">
             <div class="portfolio-item">
                 <a href="lead-generation.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/BZwWJ5ZQ/Screenshot-2025-08-16-120554.png" alt="Lead Generation">
+                    <img src="https://drive.google.com/file/d/1JRwRYb3m_yzMy0aQ9f1XeRlGxxyKgxhO/view?usp=drivesdk" alt="Lead Generation">
                     <h3><i class="fas fa-bullseye"></i> Lead Generation</h3>
                 </a>
             </div>
