--- a/index.html
+++ b/index.html
@@ -152,25 +152,25 @@
         <div class="portfolio-container">
             <div class="portfolio-item">
                 <a href="lead-generation.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/Kz3Rn7LR/IMG-20250918-062353.jpg" alt="Lead Generation">
+                    <img src="https://i.postimg.cc/qvg0hJ27/IMG-20250918-063710.jpg" alt="Lead Generation">
                     <h3><i class="fas fa-bullseye"></i> Lead Generation</h3>
                 </a>
             </div>
             <div class="portfolio-item">
                 <a href="digital-marketing.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Digital Marketing">
+                    <img src="https://i.postimg.cc/nhdzgSGX/IMG-20250918-063212.jpg" alt="Digital Marketing">
                     <h3><i class="fas fa-bullhorn"></i> Digital Marketing</h3>
                 </a>
             </div>
             <div class="portfolio-item">
                 <a href="outreach.html" class="portfolio-link">
-                    <img src="https://ibb.co/WWfyws1d" alt="Outreach Campaigns">
+                    <img src="https://i.postimg.cc/rp3pFdbc/IMG-20250918-063231.jpg" alt="Outreach Campaigns">
                     <h3><i class="fas fa-share-alt"></i> Outreach Campaigns</h3>
                 </a>
             </div>
             <div class="portfolio-item">
                 <a href="seo.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="SEO Services">
+                    <img src="https://i.postimg.cc/D0KyL9nM/IMG-20250918-063315.jpg" alt="SEO Services">
                     <h3><i class="fas fa-search"></i> SEO Services</h3>
                 </a>
             </div>
