--- a/index.html
+++ b/index.html
@@ -158,19 +158,19 @@
             </div>
             <div class="portfolio-item">
                 <a href="digital-marketing.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/nhdzgSGX/IMG-20250918-063212.jpg" alt="Digital Marketing">
+                    <img src="https://i.postimg.cc/TYJFK3Rg/M-Outreach-Compaigns.jpg" alt="Digital Marketing">
                     <h3><i class="fas fa-bullhorn"></i> Digital Marketing</h3>
                 </a>
             </div>
             <div class="portfolio-item">
                 <a href="outreach.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/rp3pFdbc/IMG-20250918-063231.jpg" alt="Outreach Campaigns">
+                    <img src="https://i.postimg.cc/kGrzbV6F/M-Outreach-Comapaigns.jpg" alt="Outreach Campaigns">
                     <h3><i class="fas fa-share-alt"></i> Outreach Campaigns</h3>
                 </a>
             </div>
             <div class="portfolio-item">
                 <a href="seo.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/D0KyL9nM/IMG-20250918-063315.jpg" alt="SEO Services">
+                    <img src="https://i.postimg.cc/7LdQFCV8/SEO-M.jpg" alt="SEO Services">
                     <h3><i class="fas fa-search"></i> SEO Services</h3>
                 </a>
             </div>
