--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     
     <nav>
-        <div class="logo">Aamir<span>Shahzad</span></div>
+        <a href="https://aamirportfolio.site" class="logo">Aamir<span>Shahzad</span></a>
         <ul>
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -158,7 +158,7 @@
             </div>
             <div class="portfolio-item">
                 <a href="digital-marketing.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/TYJFK3Rg/M-Outreach-Compaigns.jpg" alt="Digital Marketing">
+                    <img src="https://i.postimg.cc/bYtKhjsc/M-Outreach-Compaigns.jpg" alt="Digital Marketing">
                     <h3><i class="fas fa-bullhorn"></i> Digital Marketing</h3>
                 </a>
             </div>
