--- a/index.html
+++ b/index.html
@@ -152,25 +152,25 @@
         <div class="portfolio-container">
             <div class="portfolio-item">
                 <a href="lead-generation.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/qvg0hJ27/IMG-20250918-063710.jpg" alt="Lead Generation">
+                    <img src="https://i.postimg.cc/jS4GWQbs/Gemini-Generated-Image-vxmtfsvxmtfsvxmt.png" alt="Lead Generation">
                     <h3><i class="fas fa-bullseye"></i> Lead Generation</h3>
                 </a>
             </div>
             <div class="portfolio-item">
                 <a href="digital-marketing.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/bYtKhjsc/M-Outreach-Compaigns.jpg" alt="Digital Marketing">
+                    <img src="https://i.postimg.cc/fTL3q58P/DIigital-Marketing-brand.png" alt="Digital Marketing">
                     <h3><i class="fas fa-bullhorn"></i> Digital Marketing</h3>
                 </a>
             </div>
             <div class="portfolio-item">
                 <a href="outreach.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/kGrzbV6F/M-Outreach-Comapaigns.jpg" alt="Outreach Campaigns">
+                    <img src="https://i.postimg.cc/W1xJkr6H/Gemini-Generated-Image-v1lj8sv1lj8sv1lj.png" alt="Outreach Campaigns">
                     <h3><i class="fas fa-share-alt"></i> Outreach Campaigns</h3>
                 </a>
             </div>
             <div class="portfolio-item">
                 <a href="seo.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/7LdQFCV8/SEO-M.jpg" alt="SEO Services">
+                    <img src="https://i.postimg.cc/KvJznLF5/seo-brand.png" alt="SEO Services">
                     <h3><i class="fas fa-search"></i> SEO Services</h3>
                 </a>
             </div>
@@ -322,7 +322,7 @@
     <footer class="footer">
         <div class="footer-top">
             <div class="logo-col">
-                <img src="https://i.postimg.cc/DwMtG0ZR/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
+                <img src="https://i.postimg.cc/7YsKjswJ/MY-LOGO.png" alt="Logo">
                 <p class="tagline">Designing Dreams, Crafting Reality</p>
             </div>
             <div class="footer-right">
