--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     
     <nav>
-        <a href="https://aamirportfolio.site" class="logo">Aamir<span>Shahzad</span></a>
+        <a href="#" class="logo" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
         <ul>
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -164,7 +164,7 @@
             </div>
             <div class="portfolio-item">
                 <a href="outreach.html" class="portfolio-link">
-                    <img src="https://i.postimg.cc/W1xJkr6H/Gemini-Generated-Image-v1lj8sv1lj8sv1lj.png" alt="Outreach Campaigns">
+                    <img src="https://i.postimg.cc/B6hGy56S/Outreach-brand.png" alt="Outreach Campaigns">
                     <h3><i class="fas fa-share-alt"></i> Outreach Campaigns</h3>
                 </a>
             </div>
@@ -561,5 +561,11 @@ if (certsContainer && certsDotsContainer) {
 }
     </script>
     <script src="script.js?v=2"></script>
+    <script>
+    function refreshPage() {
+        // Page ko refresh karega
+        window.location.reload();
+    }
+</script>
 </body>
 </html>
