--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                 </div>
             </div>
         </div>
+        <div class="review-dots"></div>
     </section>
 
     <section id="certifications" class="certifications">
@@ -322,9 +323,11 @@
     <footer class="footer">
         <div class="footer-top">
             <div class="logo-col">
-                <img src="https://i.postimg.cc/7YsKjswJ/MY-LOGO.png" alt="Logo">
-                <p class="tagline">Designing Dreams, Crafting Reality</p>
-            </div>
+    <a href="/" class="footer-logo-link">
+        <img src="https://i.postimg.cc/7YsKjswJ/MY-LOGO.png" alt="Logo">
+    </a>
+    <p class="tagline">Designing Dreams, Crafting Reality</p>
+</div>
             <div class="footer-right">
                 <div class="footer-col">
                     <h4>About</h4>
